--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,9 @@ header{
     justify-content: center;
     background-color: hsl(0, 5%, 84%);
 }
+ul{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    padding: 1rem;
+    gap: 2rem;
+}
