--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,12 @@ ul{
     grid-template-columns: repeat(2,1fr);
     padding: 1rem;
     gap: 2rem;
+    font-size: 1.5em;
+    list-style: none;
+    box-shadow: 0 0 10px 50% rgba(0, 0, 0, 0.5);
+}
+
+li{
+    background-color: hsl(0, 5%, 95%);
+    padding: 0.5rem;
 }
