--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,13 @@ ul{
     gap: 2rem;
     font-size: 1.5em;
     list-style: none;
-    box-shadow: 0 0 10px 50% rgba(0, 0, 0, 0.5);
 }
 
 li{
     background-color: hsl(0, 5%, 95%);
     padding: 0.5rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+li:hover{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
